# weather-forecast-station

./: Cargo.toml  LICENSE
crates/weather-forecast-station-simulator/: Cargo.toml
crates/weather-forecast-station-simulator/src/: main.rs
crates/weather-forecast-station-simulator/src/layouts/: mod.rs
crates/weather-forecast-station-simulator/src/sections/: footer.rs  main_content.rs
crates/weather-forecast-station-simulator/src/widgets/: mod.rs
crates/weather-forecast-station-ui/: Cargo.toml
crates/weather-forecast-station-ui/src/: lib.rs  types.rs
crates/weather-forecast-station-ui/src/layouts/: default_layout.rs
crates/weather-forecast-station-ui/src/sections/: mod.rs
crates/weather-forecast-station-ui/src/widgets/: daylight_duration.rs
