[package]
name = "weather-forecast-station-simulator"
version = "0.1.0"

authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
embedded-graphics-simulator = "0.8.0"
embedded-graphics = "0.8.1"
embedded-layout = "0.4.2"

# TODO Create fork for this crate
epd-waveshare = {features = ["graphics"], git = "https://github.com/ImplFerris/epd-waveshare", branch = "1in54_v2_fix" }