[package]
name = "weather-forecast-station-simulator"
version = "0.1.0"

authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
weather-forecast-station-ui = { path = "../weather-forecast-station-ui" }

embedded-graphics-simulator = "0.8.0"
embedded-graphics = "0.8.1"